# rldata

./: README.md  pyproject.toml  setup.py
rldata/: __init__.py  base.py  distributed.py  modality.py  rpc.py
test/: data_config.py  docker-compose.yml  receiver.py  sender.py
